--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <div class="btn_bookmark_icon">
             <svg width="56" height="56" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
-                <circle class="btn_bookmark_circle" fill="#2F2F2F" cx="28" cy="28" r="28"/>
-                <path class="btn_bookmark_path" fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z"/>
+                <circle class="btn_bookmark_circle" fill="#2F2F2F" cx="28" cy="28" r="28" />
+                <path class="btn_bookmark_path" fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z" />
               </g>
             </svg>
           </div>
@@ -151,100 +151,116 @@
 
   <div class="modal_bg">
     <div class="modal_window">
-      <div class="window_close">
-        <h1 class="modal_header">Back this project</h1>
-        <div class="icon_close_modal">
-          <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg">
-            <path class="icon_close"
-              d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z"
-              fill="#000" fill-rule="evenodd" opacity=".4" />
-          </svg>
-        </div>
+      <div class="close_modal">
+        <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg">
+          <path class="icon_close_modal"
+            d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z"
+            fill="#000" fill-rule="evenodd" opacity=".4" />
+        </svg>
       </div>
-      <div class="modal_text">
-        <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+      <div class="modal_header">
+        <h1>Back this project</h1>
+        <div class="modal_header_text">
+          <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+        </div>
       </div>
       <div class="options">
+        <!-- MAKE IT AS A BUTTON FOR THANK YOU MODAL WINDOW -->
         <div class="option_free">
-          <div class="option_check">
-            <input type="radio" name="rate" id="free">
-            <label for="free">
-              <span class="option_check_cat">Pledge with no reward</span>
+          <div class="option_content_wrapper">
+            <label class="trigger">
+              <input type="radio" name="rate" id="free">
+              <div class="option_content_header">
+                <h2>Pledge with no reward</h2>
+              </div>
             </label>
+            <p>
+              Choose to support us without a reward if you simply believe in our project. As a backer,
+              you will be signed up to receive product updates via email.
+            </p>
           </div>
-          <p>
-            Choose to support us without a reward if you simply believe in our project. As a backer,
-            you will be signed up to receive product updates via email.
-          </p>
+          <div class="option_input">
+            <p>Thank you for your support!</p>
+          </div>
         </div>
+
         <div class="option_25">
-          <div class="option_header">
-            <div class="option_header_text">
+          <div class="option_content_wrapper">
+            <label class="trigger">
               <input type="radio" name="rate" id="25">
-              <label for="25">
-                <span class="option_check_cat">Bamboo Stand</h2>
-                </label>
-                <span class="option_rate">Pledge $25 or more</span>
-            </div>
-            <div class="modal_amount_left"><span class="amount_left">101</span> left</div>
+              <div class="option_content_header">
+                <h2>Bamboo Stand </h2>
+                <span class="option_cat">Pledge $25 or more</span>
+              </div>
+            </label>
+            <p>
+              You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign,
+              and
+              you’ll be added to a special Backer member list.
+            </p>
+            <span class="amount_left">101<p>left</p></span>
           </div>
-          <p>
-            You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-            you’ll be added to a special Backer member list.
-          </p>
           <div class="option_input">
-            Enter your pledge
-            $25
-            Continue
+            <p>Enter your pledge</p>
+            <form action="#">
+              <span class="input_wrapper">$<input type="text" inputmode="numeric" /></span>
+              <button type="submit">Continue</button>
+            </form>
           </div>
         </div>
+
         <div class="option_black_edition">
-          <div class="option_header">
-            <div class="option_header_text">
+          <div class="option_content_wrapper">
+            <label class="trigger">
               <input type="radio" name="rate" id="75">
-              <label for="75">
-                <span class="option_check_cat">Black Edition Stand</h2>
-              </label>
-              <span class="option_rate">Pledge $75 or more</span>
-            </div>
-            <div class="modal_amount_left"><span class="amount_left">64</span> left</div>
+              <div class="option_content_header">
+                <h2>Black Edition Stand</h2>
+                <span class="option_cat">Pledge $75 or more</span>
+              </div>
+            </label>
+            <p>
+              You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+              member list. Shipping is included.
+            </p>
+            <span class="amount_left">101<p>left</p></span>
           </div>
-          <p>
-            You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-            member list. Shipping is included.
-          </p>
           <div class="option_input">
-            Enter your pledge
-            $75
-            Continue
+            <p>Enter your pledge</p>
+            <form action="#">
+              <span class="input_wrapper">$<input type="text" inputmode="numeric" /></span>
+              <button type="submit">Continue</button>
+            </form>
           </div>
         </div>
+
         <div class="option_mahogany">
-          <div class="option_header">
-            <div class="option_header_text">
-              <input class="radio" type="radio" name="rate" id="200">
-              <label for="200">
-                <span class="option_check_cat">Mahogany Special Edition</h2>
-              </label>
-              <span class="option_rate">Pledge $200 or more</span>
-            </div>
-            <div class="modal_amount_left"><span class="amount_left">0</span> left</div>
+          <div class="option_content_wrapper">
+            <label class="trigger">
+              <input type="radio" name="rate" id="200">
+              <div class="option_content_header">
+                <h2>Mahogany Special Edition</h2>
+                <span class="option_cat">Pledge $200 or more</span>
+              </div>
+            </label>
+            <p>
+              You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be
+              added
+              to our Backer member list. Shipping is included.
+            </p>
+            <span class="amount_left">101<p>left</p></span>
           </div>
-          <p>
-            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be
-            added
-            to our Backer member list. Shipping is included.
-          </p>
           <div class="option_input">
-            Enter your pledge
-            $200
-            Continue
+            <p>Enter your pledge</p>
+            <form action="#">
+              <span class="input_wrapper">$<input type="text" inputmode="numeric" /></span>
+              <button type="submit">Continue</button>
+            </form>
           </div>
         </div>
+
       </div>
     </div>
-  </div>
-  <script src="./js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
