add animation and correct behavior for modal pledges

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="section_stat_values">
         <div class="section_stat_goal">
           <span class="section_stat_goal_current">
-            $89,914
+            
           </span>
           <p>of $100,000 backed</p>
         </div>
@@ -166,7 +166,7 @@
       </div>
       <div class="options">
         <!-- MAKE IT AS A BUTTON FOR THANK YOU MODAL WINDOW -->
-        <div class="option_free">
+        <div class="option">
           <div class="option_content_wrapper">
             <label class="trigger">
               <input type="radio" name="rate" id="free">
@@ -181,10 +181,11 @@
           </div>
           <div class="option_input">
             <p>Thank you for your support!</p>
+            <button type="submit">Continue</button>
           </div>
         </div>
 
-        <div class="option_25">
+        <div class="option">
           <div class="option_content_wrapper">
             <label class="trigger">
               <input type="radio" name="rate" id="25">
@@ -209,7 +210,7 @@
           </div>
         </div>
 
-        <div class="option_black_edition">
+        <div class="option">
           <div class="option_content_wrapper">
             <label class="trigger">
               <input type="radio" name="rate" id="75">
@@ -233,7 +234,7 @@
           </div>
         </div>
 
-        <div class="option_mahogany">
+        <div class="option">
           <div class="option_content_wrapper">
             <label class="trigger">
               <input type="radio" name="rate" id="200">
